fixed overflowing link

--- a/src/components/BalloonLink.css
+++ b/src/components/BalloonLink.css
@@ -41,6 +41,7 @@
     width: 240px;
     height: 24px;
     display: inline-block;
+    white-space: nowrap;
     overflow: hidden;
     border-radius: 4px;
     padding: 3px 8px;
